// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.assignSupervisorToProposals admin should assign a user as supervisor to a list of proposals. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyNjk=",
              "username": "user69",
            },
            "title": "Proposal 110",
          },
        },
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxOA==",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyNjk=",
              "username": "user69",
            },
            "title": "Proposition 18",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals admin should assign a user as supervisor to a proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyTWF4aW1l",
              "username": "mauriau",
            },
            "title": "Proposal 110",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals admin should change supervisor to proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "title": "Jurer allégeance à Nurgle",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals admin should revoke supervisor to proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTQ=",
            "supervisor": null,
            "title": "Proposal 114",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals decision maker should assign a user as supervisor to proposals. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyNg==",
              "username": "user6",
            },
            "title": "Jurer allégeance à Nurgle",
          },
        },
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
            "supervisor": Object {
              "id": "VXNlcjp1c2VyNg==",
              "username": "user6",
            },
            "title": "Proposal 110",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals decision maker should revoke supervisor to proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
            "supervisor": null,
            "title": "Jurer allégeance à Nurgle",
          },
        },
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
            "supervisor": null,
            "title": "Proposal 110",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals simple user cant assign a user as supervisor to a proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": "ACCESS_DENIED_TO_ASSIGN_SUPERVISOR",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTA=",
            "supervisor": null,
            "title": "Proposal 110",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals simple user cant change supervisor to proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": "ACCESS_DENIED_TO_ASSIGN_SUPERVISOR",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
            "supervisor": null,
            "title": "Jurer allégeance à Nurgle",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`mutations.assignSupervisorToProposals simple user cant revoke supervisor to proposal. 1`] = `
Object {
  "assignSupervisorToProposals": Object {
    "errorCode": "ACCESS_DENIED_TO_REVOKE_SUPERVISOR",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDk=",
            "supervisor": null,
            "title": "Jurer allégeance à Nurgle",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;
